--- a/src/Scraper.Application/Scraper.Application.csproj
+++ b/src/Scraper.Application/Scraper.Application.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\Scraper.Domain\Scraper.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.5" />
+  </ItemGroup>
+
 </Project>
