--- a/src/scrapper-frontend/package.json
+++ b/src/scrapper-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.16",
+    "@mantine/form": "^6.0.16",
     "@mantine/hooks": "^6.0.16",
     "@tabler/icons-react": "^2.24.0",
     "react": "^18.2.0",
