--- a/src/Scraper.Domain/Scraper.Domain.csproj
+++ b/src/Scraper.Domain/Scraper.Domain.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.9" />
   </ItemGroup>
 
 </Project>
