Feature: Social login added.

--- a/src/Scraper.WebApi/appsettings.json
+++ b/src/Scraper.WebApi/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MariaDB": ""
+  },
+  "JwtSettings": {
+    "SecretKey": "a6veRz6up39G7Xeu3RTBfC4EzZY6TzaXEaRXuyWXJjhE5ZfdRZ",
+    "Issuer": "UpStorage",
+    "Audience": "UpStorage",
+    "ExpiryInMinutes": 60
+  },
+  "GoogleSettings": {
+    "ClientId": "754820731860-2n03c3eubos6f9f4bqqds7nk3bac1560.apps.googleusercontent.com",
+    "ClientSecret": "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"
   }
 }
