--- a/src/scrapper-frontend/package.json
+++ b/src/scrapper-frontend/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^6.0.16",
     "@mantine/hooks": "^6.0.16",
     "@tabler/icons-react": "^2.24.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1"
