--- a/src/Scraper.Application/Scraper.Application.csproj
+++ b/src/Scraper.Application/Scraper.Application.csproj
@@ -13,6 +13,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.9" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.10.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="115.0.5790.10200" />
+    <PackageReference Include="WebDriverManager" Version="2.16.3" />
   </ItemGroup>
 
 </Project>
