--- a/src/scrapper-frontend/package.json
+++ b/src/scrapper-frontend/package.json
@@ -14,12 +14,16 @@
     "@mantine/core": "^6.0.16",
     "@mantine/form": "^6.0.16",
     "@mantine/hooks": "^6.0.16",
+    "@microsoft/signalr": "^7.0.9",
     "@tabler/icons-react": "^2.24.0",
     "axios": "^1.4.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "sheetjs-style": "^0.15.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
